[package]
name = "hello-rust"
version = "0.1.0"
authors = ["Ansh Sehgal <anshsehgal8@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hdf5  = "0.7"
kepler-two-body = { git = "https://github.com/clemson-cal/kepler-two-body" }
